# FFLineupOptimizer

./: .gitignore  AddPlayerDialog.cpp  AddPlayerDialog.h  AddPlayerDialog.ui  CMakeLists.txt  CsvParser.cpp  CsvParser.h  FFLineupOptimizer.pro  FFLineupOptimizer.qrc  LineupOptimizerFrontEnd.cpp  LineupOptimizerFrontEnd.h  LineupOptimizerFrontEnd.ui  Player.cpp  Player.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
